@@ -20,7 +20,6 @@ package org.apache.felix.eventadmin.impl.tasks;
 
 import java.util.Collection;
 import java.util.Iterator;
-import java.util.concurrent.TimeoutException;
 
 import org.apache.felix.eventadmin.impl.handler.EventHandlerProxy;
 import org.osgi.service.event.Event;
@@ -80,21 +79,6 @@ public class SyncDeliverTasks
     }
 
     /**
-     * This method defines if a timeout handling should be used for the
-     * task.
-     * @param tasks The event handler dispatch tasks to execute
-     */
-    private boolean useTimeout(final EventHandlerProxy proxy)
-    {
-        // we only check the proxy if a timeout is configured
-        if ( this.timeout > 0)
-        {
-            return proxy.useTimeout();
-        }
-        return false;
-    }
-
-    /**
      * This blocks an unrelated thread used to send a synchronous event until the
      * event is send (or a timeout occurs).
      *
@@ -107,69 +91,34 @@ public class SyncDeliverTasks
         final SyncThread syncThread = sleepingThread instanceof SyncThread ? (SyncThread)sleepingThread : null;
 
         final Iterator<EventHandlerProxy> i = tasks.iterator();
+        final BlacklistLatch handlerLatch = new BlacklistLatch(tasks.size(), this.timeout/2);
+        
         while ( i.hasNext() )
         {
             final EventHandlerProxy task = i.next();
+            HandlerTask handlerTask = new HandlerTask(task, event, this.timeout, handlerLatch);
 //            if ( !filterAsyncUnordered || task.isAsyncOrderedDelivery() )
 //            {
-                if ( !useTimeout(task) )
+                if( !handlerTask.useTimeout() )
                 {
-                    // no timeout, we can directly execute
-                    task.sendEvent(event);
+                	handlerTask.runWithoutBlacklistTiming();
                 }
-                else if ( syncThread != null )
+            	else if ( syncThread != null  )
                 {
                     // if this is a cascaded event, we directly use this thread
                     // otherwise we could end up in a starvation
-                    final long startTime = System.currentTimeMillis();
-                    task.sendEvent(event);
-                    if ( System.currentTimeMillis() - startTime > this.timeout )
-                    {
-                        task.blackListHandler();
-                    }
+                    handlerTask.run();
                 }
                 else
                 {
-                    final Rendezvous startBarrier = new Rendezvous();
-                    final Rendezvous timerBarrier = new Rendezvous();
-                    this.pool.executeTask(new Runnable()
-                    {
-                        @Override
-                        public void run()
-                        {
-                            try
-                            {
-                                // notify the outer thread to start the timer
-                                startBarrier.waitForRendezvous();
-                                // execute the task
-                                task.sendEvent(event);
-                                // stop the timer
-                                timerBarrier.waitForRendezvous();
-                            }
-                            catch (final IllegalStateException ise)
-                            {
-                                // this can happen on shutdown, so we ignore it
-                            }
-                        }
-                    });
-                    // we wait for the inner thread to start
-                    startBarrier.waitForRendezvous();
-
-                    // timeout handling
-                    // we sleep for the sleep time
-                    // if someone wakes us up it's the finished inner task
-                    try
-                    {
-                        timerBarrier.waitAttemptForRendezvous(this.timeout);
-                    }
-                    catch (final TimeoutException ie)
-                    {
-                        // if we timed out, we have to blacklist the handler
-                        task.blackListHandler();
-                    }
-
+                	
+                	handlerLatch.addToBlacklistCheck(handlerTask);
+                    this.pool.executeTask(handlerTask);
                 }
+               
 //            }
         }
+        handlerLatch.awaitAndBlacklistCheck();
+        
     }
 }
