@@ -2,6 +2,7 @@ Changes from 1.4.2 to 1.4.4
 ---------------------------
 ** Improvement
     * [FELIX-4623] - Add test for thread based ordering
+    * [FELIX-4638] - Less locking on event handler timing
 
 
 Changes from 1.4.0 to 1.4.2
